# bachelor-spring-24

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  TODO.md  classesDiagram-small.puml  classesDiagram.puml  edge.py  image_test.py  manim.cfg  output.txt  packages.puml  requirements.txt  ruff.toml  scene.py  setup.cfg  vertex.py  what_to_do.txt
.github/: pull_request_template.md
.github/workflows/: pytest_workflow.yml
src/: BFS.py  BSF.py  DFS.py  DSF.py  arrow.py  auto_layout_graph.py  colors.py  edge.py  flow.py  flow_animation.py  flow_network.py  flow_object.py  ford_fulkerson.py  graph.py  graph_segments.py  main.py  network.py  path.py  path_finder.py  someexample.py  test.py  tex.py  text_helper.py  updaters.py  utils.py  vertex.py  vertices_examples.py
test/: Test_Polygon_Example.py  Testing_Polygon.py  graph1.py  graph_segment.py  polygon.py  segment.py  test_edge.py  test_graph.py  test_graph_linear.py  test_graph_log2.py  test_graph_sedgewick_wayne.py  test_graph_sqrt.py  test_polygon.py  test_segment.py  test_vertex.py
test/data/: _data.py
